@@ -205,6 +205,24 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 #stats_publisher_text
 IATI 出版社
 
+#stats_pipeline_text
+管道/识别
+
+#stats_implementation_text
+实施
+
+#stats_finalisation_text
+完成
+
+#stats_closed_text
+关闭
+
+#stats_cancelled_text
+取消
+
+#stats_suspended_text
+暂停
+
 #stats_missing_text 
 其他项目 
 
@@ -244,6 +262,24 @@ IATI<span>出版社</span>
 
 #stats_publisher_tip_text
 的组织报告这个数据总数
+
+#stats_pipeline_tip_text
+正在确定范围或计划的活动总数
+
+#stats_implementation_tip_text
+当前正在实施的活动总数
+
+#stats_finalisation_tip_text
+已完成或已进行最终支付但仍待财务签字或 M&E 批准的实际活动
+
+#stats_closed_tip_text
+已完成或已进行最终支付的实际活动
+
+#stats_cancelled_tip_text
+已取消的活动总数
+
+#stats_suspended_tip_text
+已暂时中止的活动总数
 
 #stats_missing_tip_text 
 那缺少日期的项目总数
