@@ -208,6 +208,24 @@ Planned Activities
 #stats_publisher_text
 IATI Reporting Organisations
 
+#stats_pipeline_text
+Pipeline/identification
+
+#stats_implementation_text
+Implementation
+
+#stats_finalisation_text
+Finalisation
+
+#stats_closed_text
+Closed
+
+#stats_cancelled_text
+Cancelled
+
+#stats_suspended_text
+Suspended
+
 #stats_missing_text
 Other Activities
 
@@ -247,6 +265,24 @@ Total number of activities being planned in the future
 
 #stats_publisher_tip_text
 Total number of organisations that are reporting this data
+
+#stats_pipeline_tip_text
+Total number of activities being scoped or planned
+
+#stats_implementation_tip_text
+Total number of activities currently being implemented
+
+#stats_finalisation_tip_text
+Physical activities that are complete or the final disbursement has been made, but remains open pending financial sign off or M&E
+
+#stats_closed_tip_text
+Physical activities that are complete or the final disbursement has been made
+
+#stats_cancelled_tip_text
+Total number of activities that have been cancelled 
+
+#stats_suspended_tip_text
+Total number of activities that have been temporarily suspended 
 
 #stats_missing_tip_text
 Total number of activities that are missing dates
