@@ -205,6 +205,24 @@ Projets Prévus
 #stats_publisher_text 
 IATI éditeurs
 
+#stats_pipeline_text
+Pipeline/identification
+
+#stats_implementation_text
+Mise en œuvre
+
+#stats_finalisation_text
+Finalisation
+
+#stats_closed_text
+Fermé
+
+#stats_cancelled_text
+Annulé
+
+#stats_suspended_text
+Suspendu
+
 #stats_missing_text 
 D'autres projets 
 
@@ -244,6 +262,24 @@ Nombre total de projets en cours de planification dans l'avenir
 
 #stats_publisher_tip_text 
 Nombre d'organisations qui rapporte ces données 
+
+#stats_pipeline_tip_text
+Nombre total d'activités en cours d'évaluation ou planifiées
+
+#stats_implementation_tip_text
+Nombre total d'activités en cours de mise en œuvre
+
+#stats_finalisation_tip_text
+Activités physiques terminées ou dont le décaissement final a été effectué, mais qui restent ouvertes en attente de la validation financière ou du suivi et de l'évaluation
+
+#stats_closed_tip_text
+Activités physiques terminées ou dont le décaissement final a été effectué
+
+#stats_cancelled_tip_text
+Nombre total d'activités qui ont été annulées
+
+#stats_suspended_tip_text
+Nombre total d'activités qui ont été temporairement suspendues
 
 #stats_missing_tip_text 
 Nombre total de projets qui sont les dates manquantes
