@@ -205,6 +205,24 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 #stats_publisher_text
 IATI प्रकाशक
 
+#stats_pipeline_text
+पाइपलाइन/पहचान
+
+#stats_implementation_text
+कार्यान्वयन
+
+#stats_finalisation_text
+अंतिमकरण
+
+#stats_closed_text
+बंद
+
+#stats_cancelled_text
+रद्द
+
+#stats_suspended_text
+निलंबित
+
 #stats_missing_text 
 अन्य परियोजनाएँ 
 
@@ -244,6 +262,24 @@ IATI<span>प्रकाशक</span>
 
 #stats_publisher_tip_text
 इस डेटा रिपोर्टिंग कर रहे हैं कि संगठनों की कुल संख्या
+
+#stats_pipeline_tip_text
+कुल गतिविधियों की संख्या जिन्हें दायरे में रखा गया है या जिनकी योजना बनाई गई है
+
+#stats_implementation_tip_text
+कुल गतिविधियों की संख्या जिन्हें वर्तमान में क्रियान्वित किया जा रहा है
+
+#stats_finalisation_tip_text
+भौतिक गतिविधियाँ जो पूरी हो चुकी हैं या जिनका अंतिम भुगतान हो चुका है, लेकिन वित्तीय हस्ताक्षर या M&E लंबित होने तक खुली रहती हैं
+
+#stats_closed_tip_text
+भौतिक गतिविधियाँ जो पूरी हो चुकी हैं या जिनका अंतिम भुगतान हो चुका है
+
+#stats_cancelled_tip_text
+कुल गतिविधियों की संख्या जिन्हें रद्द कर दिया गया है
+
+#stats_suspended_tip_text
+कुल गतिविधियों की संख्या जिन्हें अस्थायी रूप से निलंबित कर दिया गया है
 
 #stats_missing_tip_text 
 तारीखें याद कर रहे हैं कि परियोजनाओं की कुल संख्या
