@@ -205,6 +205,24 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 #stats_publisher_text
 IATIパブリッシャ
 
+#stats_pipeline_text
+パイプライン/識別
+
+#stats_implementation_text
+実装
+
+#stats_finalisation_text
+最終処理
+
+#stats_closed_text
+終了
+
+#stats_cancelled_text
+キャンセル
+
+#stats_suspended_text
+一時停止
+
 #stats_missing_text 
 その他のプロジェクト 
 
@@ -244,6 +262,24 @@ IATI<span>パブリッシャ</span>
 
 #stats_publisher_tip_text
 このデータを報告している組織の総数
+
+#stats_pipeline_tip_text
+スコープ設定または計画中のアクティビティの総数
+
+#stats_implementation_tip_text
+現在実施中のアクティビティの総数
+
+#stats_finalisation_tip_text
+完了したか、最終支払いが行われたが、財務承認または M&E を待ってまだ開いている物理的なアクティビティ
+
+#stats_closed_tip_text
+完了したか、最終支払いが行われた物理的なアクティビティ
+
+#stats_cancelled_tip_text
+キャンセルされたアクティビティの総数
+
+#stats_suspended_tip_text
+一時的に中断されたアクティビティの総数
 
 #stats_missing_tip_text 
 日付が欠落しているプロジェクトの総数
