@@ -205,6 +205,24 @@ Proyectos Planificados
 #stats_publisher_text 
 IATI Editores 
 
+#stats_pipeline_text
+Pipeline/identificación
+
+#stats_implementation_text
+Implementación
+
+#stats_finalisation_text
+Finalización
+
+#stats_closed_text
+Cerrado
+
+#stats_cancelled_text
+Cancelado
+
+#stats_suspended_text
+Suspendido
+
 #stats_missing_text 
 Otros proyectos 
 
@@ -244,6 +262,24 @@ Número total de proyectos que están siendo planificadas en el futuro
 
 #stats_publisher_tip_text 
 Número total de organizaciones que están reportando estos datos 
+
+#stats_pipeline_tip_text
+Número total de actividades que se están definiendo o planificando
+
+#stats_implementation_tip_text
+Número total de actividades que se están implementando actualmente
+
+#stats_finalisation_tip_text
+Actividades físicas que se han completado o se ha realizado el desembolso final, pero que permanecen abiertas a la espera de la aprobación financiera o el seguimiento y evaluación
+
+#stats_closed_tip_text
+Actividades físicas que se han completado o se ha realizado el desembolso final
+
+#stats_cancelled_tip_text
+Número total de actividades que se han cancelado
+
+#stats_suspended_tip_text
+Número total de actividades que se han suspendido temporalmente
 
 #stats_missing_tip_text 
 Número total de proyectos que son fechas faltantes
