@@ -582,6 +582,8 @@ table.modals td span.withdrawn	{background-color:#545e73; color:#ddd; display:in
 
 
 
+
+
 /*	Chartist SVG	 */
 .showchart,
 .showcharts		{height:240px; margin:auto; margin:0 0 30px -35px; padding:10px 0 0 0; width:920px;}
