@@ -1,3 +1,9 @@
+Development Portal (2024-09-03 shi)
+==============================
+Add activity status codes
+Update translation text
+
+
 Development Portal (2024-07-17 shi)
 ==============================
 Add SDG svg icons to SAVi css
